@@ -2,6 +2,8 @@
 package net.mcreator.fnafmod.item;
 
 import net.minecraftforge.client.extensions.common.IClientItemExtensions;
+import net.minecraftforge.api.distmarker.OnlyIn;
+import net.minecraftforge.api.distmarker.Dist;
 
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.ItemStack;
@@ -17,7 +19,7 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.mcreator.fnafmod.client.model.ModelGlitchtrap_Mask;
+import net.mcreator.fnafmod.client.model.ModelMascot_Bonnie_Costume;
 
 import java.util.function.Consumer;
 import java.util.Map;
@@ -79,8 +81,8 @@ public abstract class GlitchtrapSuitItem extends ArmorItem {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new ModelGlitchtrap_Mask(Minecraft.getInstance().getEntityModels().bakeLayer(ModelGlitchtrap_Mask.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
+							Map.of("head", new ModelMascot_Bonnie_Costume(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMascot_Bonnie_Costume.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -93,7 +95,7 @@ public abstract class GlitchtrapSuitItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/glitchtrap_mask.png";
+			return "fnaf_mod:textures/entities/mascot_costume_bonnie.png";
 		}
 	}
 
@@ -125,8 +127,27 @@ public abstract class GlitchtrapSuitItem extends ArmorItem {
 		}
 
 		@Override
+		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
+			consumer.accept(new IClientItemExtensions() {
+				@Override
+				@OnlyIn(Dist.CLIENT)
+				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("left_leg", new ModelMascot_Bonnie_Costume(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMascot_Bonnie_Costume.LAYER_LOCATION)).LeftBoot, "right_leg",
+									new ModelMascot_Bonnie_Costume(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMascot_Bonnie_Costume.LAYER_LOCATION)).RightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					armorModel.crouching = living.isShiftKeyDown();
+					armorModel.riding = defaultModel.riding;
+					armorModel.young = living.isBaby();
+					return armorModel;
+				}
+			});
+		}
+
+		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "fnaf_mod:textures/entities/glitchtrap_1.png";
+			return "fnaf_mod:textures/entities/mascot_costume_bonnie.png";
 		}
 	}
 }
